# agentcore-private-registry-blueprint

./: .gitignore  README.en.md  README.md
.github/ISSUE_TEMPLATE/: config.yml  skill-cli-unit-tests.md
cdk/: README.md  cdk.json  package-lock.json  package.json  tsconfig.json
cdk/lib/: codeartifact-stack.ts  identity-stack.ts  registry-stack.ts
docs/: 01-why-private-skills.md  02-architecture.md  03-demo-walkthrough.md  04-dynamic-discovery.md  05-auth-placeholder.md  06-future-optimizations.md  07-extending-to-other-resources.md  08-publishing-workflow.md  09-publishing-iam.md  10-end-user-access.md
docs/images/: architecture.excalidraw
examples/: README.md
examples/cognito-end-to-end/: README.md  run_demo.py
examples/guardrail/: README.md  example-record.json  register.py
examples/knowledge-base/: README.md  example-record.json  register.py
examples/lambda-tool/: README.md  example-record.json  register.py
examples/mcp-server/: README.md  example-record-url-sync.json  example-record.json  register-url-sync.py  register.py
scripts/: 01_create_registry.py  02_register_skill.py  03_approve_skill.py  04_consume_skill.py
skill-package/: README.md  pyproject.toml
skill-package/src/aws_cost_anomaly_triage/: postinstall.py
skill-package/src/aws_cost_anomaly_triage/skill_files/: SKILL.md
skill-package/src/aws_cost_anomaly_triage/skill_files/resources/: anomaly-patterns.md  confounders.md  per-service-drilldown.md  postmortem-template.md  remediation-playbook.md  thresholds.md
skills/skill-cli/: README.md  pyproject.toml  skill_cli.py
(+3 files in other folders)
