[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aws-cost-anomaly-triage"
version = "0.1.0"
description = "Agent skill: SOP for triaging AWS cost anomalies surfaced by Cost Explorer or Cost Anomaly Detection."
readme = "README.md"
requires-python = ">=3.9"
authors = [{name = "Eric Yan"}]
license = {text = "Apache-2.0"}
classifiers = [
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Topic :: Software Development",
]

[project.scripts]
install-aws-cost-anomaly-triage = "aws_cost_anomaly_triage.postinstall:main"

[tool.setuptools.package-data]
"aws_cost_anomaly_triage" = ["skill_files/**/*"]

[tool.setuptools.packages.find]
where = ["src"]
