[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "skill-cli"
version = "0.1.0"
description = "End-user JWT → AWS credentials bridge for the agentcore private registry blueprint"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "Apache-2.0"}
dependencies = [
  "boto3>=1.34",
  "keyring>=24",
  "requests>=2.31",
]

[project.scripts]
skill-cli = "skill_cli:main"

[tool.setuptools]
py-modules = ["skill_cli"]
